frappe/public/scss/common/buttons.scss
.center-content {
	display: flex;
	justify-content: center;
	align-items: center;
}

@mixin button-with-highlight($highlightColor, $opacityBase: 0, $opacityHover: 1) {
	& {
		--btn-highlight-color: #{$highlightColor};
		position: relative;
		overflow: visible;
	}

	&::after {
		content: "";
		display: block;
		position: absolute;

		pointer-events: none;

		top: 0px;
		left: 0px;
		width: 100%;
		height: 100%;

		border-radius: inherit;
		background: none;

		transition: all 50ms ease;
		transition-property: opacity, outline-width;

		opacity: $opacityBase;
		outline: 1px solid var(--btn-highlight-color);
		outline-offset: -1px;
		transform: translateZ(0);
	}

	&:hover:not(:active), &:focus-visible {
		&::after {
			opacity: $opacityHover;
			outline-width: 2px;
		}
	}
}

.btn {
	&:not(.btn-outline-secondary) {
		border: none;
	}
	border-radius: var(--border-radius);
	box-shadow: var(--btn-shadow);
	font-size: var(--text-md);

	font-weight: 500;
	// --icon-stroke: currentColor;

	&.icon-btn {
		height: var(--btn-height);
		padding: 0px;
		@extend .center-content;
		&.btn-default, &.btn-secondary {
			min-width: 28px;
		}
	}

	transition: all 0.2s ease;
	transition-property: color, background-color, border, opacity, box-shadow;
}
.btn:hover:not(:active), .btn:focus-visible {
	--btn-shadow: var(--btn-shadow-hover);
}

.btn-secondary-dark {
	@include button-variant(
		$background: $gray-600,
		$border: $gray-600,
		$hover-background: lighten($gray-600, 1%),
		$hover-border: $gray-600,
		$active-background: lighten($gray-600, 1%),
		$active-border: darken($gray-600, 12.5%)
	);

	color: $white;
	&:hover, &:active, &:focus {
		color: $white;
	}
	.icon {
		--icon-stroke: currentColor;
	}
}

.btn.btn-primary-light {
	color: var(--primary);
	background-color: $primary-light;
	--icon-stroke: currentColor;
	@include button-with-highlight(var(--primary), 1);

	[data-theme="dark"] & {
		color: var(--text-color);
		background-color: var(--bg-dark-blue);
	}
}

.btn.btn-secondary {
	background-color: var(--control-bg);
	color: var(--text-color);
	&:hover:not([disabled]), &:active {
		background-color: var(--gray-400);
		color: var(--text-color);
	}
}

.btn.btn-default {
	background-color: var(--fg-color);
	color: var(--text-color);
	&:hover:not(:active), &:focus-visible {
		background: var(--fg-hover-color);
		color: var(--text-color);
	}
}

.btn.btn-primary {
	background-color: var(--primary);
	color: var(--white);
	white-space: nowrap;
	--icon-stroke: currentColor;
	--icon-fill-bg: var(--primary);
	@include button-with-highlight(var(--primary));
}

.btn.btn-danger {
	background-color: var(--red-400);
	color: var(--white);
	--icon-stroke: currentColor;
	@include button-with-highlight(var(--red-400));
}

.btn-reset {
	padding: 0;
	margin: 0;
	border: 0;
	font-size: inherit;
	background-color: inherit;
}

@mixin button-text-variant($fg, $bg) {
	box-shadow: none;
	border: none;
	text-decoration: underline;

	background-color: transparent;
	color: $bg;
	--icon-stroke: currentColor;
	font-weight: 600;

	&:hover:not(:active) {
		background-color: $bg;
		color: $fg;
	}

	.icon:first-child {
		margin-right: 2px;
	}
}

.btn.btn-text-primary {
	@include button-text-variant(var(--white), var(--primary));
}
.btn.btn-text-danger {
	@include button-text-variant(var(--alert-bg-danger), var(--alert-text-danger));
}

